# brightsky-ha

./: .gitignore  AGENTS.md  README.md  hacs.json  pyproject.toml
.github/workflows/: tests.yml
custom_components/brightsky/: __init__.py  api.py  config_flow.py  const.py  coordinator.py  entity.py  manifest.json  mappers.py  models.py  sensor.py  strings.json  weather.py
custom_components/brightsky/translations/: en.json
tests/: test_api.py  test_hacs_structure.py  test_mappers.py  test_sensor_descriptions.py
